[package]
name = "divine_tools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dt"
path = "src/main.rs"

[profile.dev]
opt-level = 1
debug = false

[profile.release]
strip = true
lto = "fat"
codegen-units = 1

[dependencies]
argh = { version = "0.1.13", default-features = false, features = ["help"] }
eframe = "0.33.3"
erased-serde = "0.4.9"
rfd = "0.16.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
